# intershap-python

./: .gitignore  LICENSE  README.md  pyproject.toml  sanbox_sklear.py  sandbox.py
src/intershap/: __init__.py  dataset.py  explainer.py
tests/: test_explainer.py
